# cli

./: .gitignore  README.md  pyproject.toml
src/: territory.py
src/territory/: __init__.py  api_client.py  c.py  cli.py  files.py  git.py  go.py  python.py
tests/: territory_testlib.py  test_cc.py  test_cli.py  test_packing.py
tests/repo-go/: go.mod
tests/static/: authorize.html
